- Navbar no longer fixed - Navbar underneath line animation - Fixed spacing between nabber menu items

--- a/wehack.css
+++ b/wehack.css
@@ -129,19 +129,58 @@ body {
   left: 0;
 }
 
+.navmenu > ul
+{
+  margin: 0px;
+  padding: 0px;
+}
+
+.navmenu > ul li
+{
+  display: inline-block;
+}
+
+.navmenu > ul li a
+{
+  text-decoration: none;
+  color: #d24a32;
+  width: 120px;
+  display: inline-block;
+  text-shadow: 2px 2px 2px #fff2ce;
+  padding: 20px 0;
+  font-weight: bold;
+  position: relative;
+}
+
+.navmenu > ul li a::before {
+background: #fff2ce none repeat scroll 0 0;
+bottom: -2px;
+content: "";
+height: 3px;
+left: 0;
+position: absolute;
+width: 0%;
+transition: 0.5s;
+}
+
+.navmenu > ul li a:hover::before
+{
+  width: 100%;
+}
+
 
 .menu {
   display: flex;
-  gap: 1em;
+  gap: 2em;
   font-size: 18px;
 }
 
-
-.menu li:hover {
+/* can uncomment if background hover is prefferred  */
+/* .menu li:hover {
   background-color: #fff2ce;
   border-radius: 5px;
   transition: 0.3s ease;
-}
+} */
 
 .menu li {
   list-style: none;
@@ -150,14 +189,13 @@ body {
 .menu li a {
   color: #d24a32;
   text-shadow: 2px 2px 2px #fff2ce;
-  text-align: left;
+  text-align: center;
   padding: 0.5vh 5vw;
   text-decoration: none;
   font-size: 20px;
   font-weight: bold;
   float: center;
   display: block;
-
 }
 
 input[type=checkbox] {
@@ -197,8 +235,7 @@ input[type=checkbox] {
 
   .menu li:hover {
     display: inline-block;
-    /* background-color: fff2ce; */
-    background-color: #000000;
+    background-color: fff2ce;
     transition: 0.3s ease;
   }
 
